@@ -19,16 +19,12 @@ Nagios::MKLivestatus::INET - connector with tcp sockets
 
 =head1 CONSTRUCTOR
 
-=over 4
-
-=item new ( [ARGS] )
+=head2 new ( [ARGS] )
 
 Creates an C<Nagios::MKLivestatus::INET> object. C<new> takes at least the server.
 Arguments are the same as in C<Nagios::MKLivestatus>.
 If the constructor is only passed a single argument, it is assumed to
 be a the C<server> specification. Use either socker OR server.
-
-=back
 
 =cut
 
@@ -48,13 +44,14 @@ sub new {
 
 =head1 METHODS
 
-=over 4
-
 =cut
 
 sub _open {
     my $self = shift;
-    my $sock = IO::Socket::INET->new($self->{'server'});
+    my $sock = IO::Socket::INET->new(
+                                     PeerAddr => $self->{'server'},
+                                     timeout  => $self->{'timeout'},
+                                     );
     if(!defined $sock or !$sock->connected()) {
         my $msg = "failed to connect to $self->{'server'} :$!";
         if($self->{'errors_are_fatal'}) {
@@ -70,12 +67,6 @@ sub _open {
 
 ########################################
 
-=item close
-
-close the sock
-
-=cut
-
 sub _close {
     my $self = shift;
     my $sock = shift;
@@ -84,8 +75,6 @@ sub _close {
 
 
 1;
-
-=back
 
 =head1 AUTHOR
 
