@@ -7,6 +7,8 @@ Revision history for Perl extension Nagios::MKLivestatus.
 	- added pod test
 	- added tests with real socket / server
 	- added column aliases
+	- added timeout option
+	- implemented select_scalar_value()
 	- fixed perl::critic tests
 
 0.18  Sat Nov 14 2009 08:58:02 GMT
